--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Diego",
   "dependencies": {
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "react": "^18.2.0",
